--- a/views/partials/nav.mustache
+++ b/views/partials/nav.mustache
@@ -20,7 +20,7 @@
 							<li><a id="nav-login" href="#sign-in-dialog" class="popup-with-zoom-anim">Login</a></li>
   					</ul>
   				</nav>
-          <div id="login-container hidden-xs">
+          <div id="login-container" class="hidden-xs">
   					<a id="btn-login" href="#sign-in-dialog" class="button with-icon popup-with-zoom-anim">JOIN <i class="sl sl-icon-login" style="padding-left:4px"></i></a>
           </div>
 				</div>
