--- a/views/index.mustache
+++ b/views/index.mustache
@@ -20,6 +20,13 @@
       font-size: 20px;
       border-radius: 6px;
     }
+
+    .ex-icon {
+      background:red;
+      height:20px;
+      width:20px;
+      font-size:14px
+    }
   </style>
 </head>
 
@@ -162,6 +169,27 @@
         Vertex websites are free to start and come with a robust set of features
         out of the box. Once you are ready to connect your site to a custom domain,
         our afforable plans begin at only $5 per month.
+        <table class="table table-striped" style="border:1px solid #ededed;background:#fffffa">
+          <thead>
+            <tr>
+              <td style="padding:12px">&nbsp;</td>
+              <td style="padding:12px"><b>Premium</b></td>
+              <td style="padding:12px"><b>Basic</b></td>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Custom Domain</td>
+              <td><i class="verified-icon margin-left-10"></i></td>
+              <td><span class="qtyTotal ex-icon margin-left-10" name="qtyTotal">x</span></td>
+            </tr>
+            <tr>
+              <td>Custom Domain</td>
+              <td><i class="verified-icon margin-left-10"></i></td>
+              <td><span class="qtyTotal ex-icon margin-left-10" name="qtyTotal">x</span></td>
+            </tr>
+          </tbody>
+        </table>
       </p>
       <%#showGetStarted%>
       <a id="btn-get-started" href="#sign-in-dialog" style="border-radius:4px;width:100%;text-align:center;letter-spacing:3px" class="button with-icon popup-with-zoom-anim">GET STARTED</i></a>
