--- a/views/index.mustache
+++ b/views/index.mustache
@@ -156,13 +156,6 @@
 
       <hr class="margin-bottom-40" />
 
-      <h3>Social</h3>
-      <p class="margin-top-0 margin-bottom-40">
-        Connect to your Facebook, Instagram, LinkedIn, YouTube, and Soundcloud accounts.
-      </p>
-
-      <hr class="margin-bottom-40" />
-
       <img class="margin-left-20 margin-bottom-20" style="width:40%;float:right;padding:3px;border:1px solid #ededed" src="https://lh3.googleusercontent.com/i66jh3seKUPT3L4qmKYd3Xp9CCQizoQHKIRAZCAisaoqDLeHAOEdxt5DdD5naLliecwl_tHMEvg0Df1pbkITET0m=s512" />
       <h3 class="margin-top-40">Free to Start</h3>
       <p class="margin-top-0 margin-bottom-40">
@@ -173,20 +166,35 @@
           <thead>
             <tr>
               <td style="padding:12px">&nbsp;</td>
-              <td style="padding:12px"><b>Premium</b></td>
-              <td style="padding:12px"><b>Basic</b></td>
+              <td style="padding:12px"><b>Basic</b><br /><small>Free</small></td>
+              <td style="padding:12px"><b>Premium</b><br /><small>$5/month</small></td>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td>Custom Domain</td>
+              <td>Unlimited Test Sites</td>
               <td><i class="verified-icon margin-left-10"></i></td>
-              <td><span class="qtyTotal ex-icon margin-left-10" name="qtyTotal">x</span></td>
+              <td><i class="verified-icon margin-left-10"></i></td>
+            </tr>
+            <tr>
+              <td>CMS (for blog, subscribers, etc)</td>
+              <td><i class="verified-icon margin-left-10"></i></td>
+              <td><i class="verified-icon margin-left-10"></i></td>
+            </tr>
+            <tr>
+              <td>Downloadable Code</td>
+              <td><i class="verified-icon margin-left-10"></i></td>
+              <td><i class="verified-icon margin-left-10"></i></td>
             </tr>
             <tr>
               <td>Custom Domain</td>
+              <td><span class="qtyTotal ex-icon margin-left-10">x</span></td>
               <td><i class="verified-icon margin-left-10"></i></td>
-              <td><span class="qtyTotal ex-icon margin-left-10" name="qtyTotal">x</span></td>
+            </tr>
+            <tr>
+              <td>Automatic SSL</td>
+              <td><span class="qtyTotal ex-icon margin-left-10">x</span></td>
+              <td><i class="verified-icon margin-left-10"></i></td>
             </tr>
           </tbody>
         </table>
