--- a/views/index.mustache
+++ b/views/index.mustache
@@ -42,8 +42,8 @@
 	<div class="fs-inner-container content">
 		<div class="fs-content">
 
-			<section class="search bg-yellow">
-        <h2>Professional Websites. Fast.</h2>
+			<section class="search" style="background:#3e5492;color:#fff">
+        <h2 style="color:#fff">Professional Websites. Fast.</h2>
         <p>
           Create fully-featured professional websites in minutes. Select a template
           below to get started.
