--- a/views/partials/nav.mustache
+++ b/views/partials/nav.mustache
@@ -17,6 +17,7 @@
   					<ul id="responsive">
   						<li><a class="current" href="/">Home</a></li>
   						<li><a id="nav-how-it-works" href="#">How It Works</a></li>
+							<li><a id="nav-faq" href="#">FAQ</a></li>
 							<li><a id="nav-login" href="#sign-in-dialog" class="popup-with-zoom-anim">Login</a></li>
   					</ul>
   				</nav>
