complete faq questions

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -115,7 +115,7 @@
   		<h3>Frequently Asked Questions</h3>
       <%#faq%>
       <h4 class="margin-top-40">Q: <% question %></h4>
-      <p class="margin-top-0 margin-bottom-40">A: <% answer %></p>
+      <p class="margin-top-0 margin-bottom-40">A: <%{answer}%></p>
       <%/faq%>
   	</div>
   </div>
