formatting for faq sections

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -27,6 +27,10 @@
       width:20px;
       font-size:14px
     }
+
+    .faq-answer img {
+      margin-top: 16px;
+    }
   </style>
 </head>
 
@@ -115,7 +119,7 @@
   		<h3>Frequently Asked Questions</h3>
       <%#faq%>
       <h4 class="margin-top-40">Q: <% question %></h4>
-      <p class="margin-top-0 margin-bottom-40">A: <%{answer}%></p>
+      <p class="margin-top-0 margin-bottom-50 faq-answer">A: <%{answer}%></p>
       <%/faq%>
   	</div>
   </div>
