use dance cover image

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -172,7 +172,7 @@
 
       <hr class="margin-bottom-40" />
 
-      <img class="margin-left-20 margin-bottom-20" style="width:40%;float:right;padding:3px;border:1px solid #ededed" src="https://lh3.googleusercontent.com/i66jh3seKUPT3L4qmKYd3Xp9CCQizoQHKIRAZCAisaoqDLeHAOEdxt5DdD5naLliecwl_tHMEvg0Df1pbkITET0m=s512" />
+      <img class="margin-left-20 margin-bottom-20" style="width:44%;float:right;" src="https://lh3.googleusercontent.com/brSHk-ZDAbE4ktT20RjeEAF_N6PsrtIdFvN98PzbHsFwpWsmEoXcoq0liYvY1_YbzT6WaE5eUIINd8euMESFFQu4=s512" />
       <h3 class="margin-top-40">Free to Start</h3>
       <p class="margin-top-0 margin-bottom-40">
         Vertex websites are free to start and come with a robust set of features
