--- a/views/profile.mustache
+++ b/views/profile.mustache
@@ -32,6 +32,7 @@
             </div>
             <div class="user-profile-name">
               <h2>{{profile.firstName}} {{profile.lastName}}</h2>
+              <small>{{profile.username}}</small>
             </div>
           </div>
   			</section>
