--- a/views/profile.mustache
+++ b/views/profile.mustache
@@ -31,9 +31,13 @@
               <img src="{{{profile.image}}}=s512-c" alt="Vertex 360">
             </div>
             <div class="user-profile-name">
-              <h2>{{profile.firstName}} {{profile.lastName}}</h2>
-              <small>{{profile.username}}</small>
+              <h2 class="margin-bottom-0 capitalize">{{profile.firstName}} {{profile.lastName}}</h2>
+              <span>{{profile.username}}</span>
             </div>
+          </div>
+          <hr class="margin-top-40" />
+          <div>
+            <p>{{{profile.bio}}}</p>
           </div>
   			</section>
 
