--- a/views/profile.mustache
+++ b/views/profile.mustache
@@ -43,10 +43,6 @@
 
 
   		<section class="listings-container margin-top-30">
-
-
-
-  			<!-- Pagination Container -->
   			<div class="row fs-listings">
   				<div class="col-md-12">
   					<div class="copyrights margin-top-0">© 2017 Listeo. All Rights Reserved.</div>
@@ -61,7 +57,7 @@
   	<div class="fs-inner-container map-fixed" style="overflow:scroll">
 
       <!-- Listings -->
-      <div class="row fs-listings">
+      <div class="row fs-listings margin-top-40">
 
         <!-- Listing Item -->
         <div class="col-lg-6 col-md-12">
