--- a/views/profile.mustache
+++ b/views/profile.mustache
@@ -59,120 +59,26 @@
       <!-- Listings -->
       <div class="row fs-listings margin-top-40">
 
-        <!-- Listing Item -->
+        {{#sites}}
         <div class="col-lg-6 col-md-12">
-          <a href="listings-single-page.html" class="listing-item-container" data-marker-id="1">
+          <a href="#" class="listing-item-container" data-marker-id="2">
             <div class="listing-item">
-              <img src="images/listing-item-01.jpg" alt="">
-
-              <div class="listing-badge now-open">Now Open</div>
-
-              <div class="listing-item-content">
-                <span class="tag">Eat & Drink</span>
-                <h3>Tom's Restaurant <i class="verified-icon"></i></h3>
-                <span>964 School Street, New York</span>
-              </div>
-              <span class="like-icon"></span>
-            </div>
-          </a>
-        </div>
-        <!-- Listing Item / End -->
-
-        <!-- Listing Item -->
-        <div class="col-lg-6 col-md-12">
-          <a href="listings-single-page.html" class="listing-item-container" data-marker-id="2">
-            <div class="listing-item">
-              <img src="images/listing-item-02.jpg" alt="">
+              <img src="{{{image}}}=s512-c" alt="">
               <div class="listing-item-details">
                 <ul>
                   <li>Friday, August 10</li>
                 </ul>
               </div>
               <div class="listing-item-content">
-                <span class="tag">Events</span>
-                <h3>Sticky Band</h3>
+                <span class="tag">{{template.category}}</span>
+                <h3>{{name}}</h3>
                 <span>Bishop Avenue, New York</span>
               </div>
               <span class="like-icon"></span>
             </div>
           </a>
         </div>
-        <!-- Listing Item / End -->
-
-        <!-- Listing Item -->
-        <div class="col-lg-6 col-md-12">
-          <a href="listings-single-page.html" class="listing-item-container" data-marker-id="3">
-            <div class="listing-item">
-              <img src="images/listing-item-03.jpg" alt="">
-              <div class="listing-item-details">
-                <ul>
-                  <li>Starting from $59 per night</li>
-                </ul>
-              </div>
-              <div class="listing-item-content">
-                <span class="tag">Hotels</span>
-                <h3>Hotel Govendor</h3>
-                <span>778 Country Street, New York</span>
-              </div>
-              <span class="like-icon"></span>
-            </div>
-          </a>
-        </div>
-        <!-- Listing Item / End -->
-
-        <!-- Listing Item -->
-        <div class="col-lg-6 col-md-12">
-          <a href="listings-single-page.html" class="listing-item-container" data-marker-id="4">
-            <div class="listing-item">
-              <img src="images/listing-item-04.jpg" alt="">
-
-              <div class="listing-badge now-open">Now Open</div>
-
-              <div class="listing-item-content">
-                <span class="tag">Eat & Drink</span>
-                <h3>Burger House <i class="verified-icon"></i></h3>
-                <span>2726 Shinn Street, New York</span>
-              </div>
-              <span class="like-icon"></span>
-            </div>
-          </a>
-        </div>
-        <!-- Listing Item / End -->
-
-        <!-- Listing Item -->
-        <div class="col-lg-6 col-md-12">
-          <a href="listings-single-page.html" class="listing-item-container" data-marker-id="5">
-            <div class="listing-item">
-              <img src="images/listing-item-05.jpg" alt="">
-              <div class="listing-item-content">
-                <span class="tag">Other</span>
-                <h3>Airport</h3>
-                <span>1512 Duncan Avenue, New York</span>
-              </div>
-              <span class="like-icon"></span>
-            </div>
-          </a>
-        </div>
-        <!-- Listing Item / End -->
-
-        <!-- Listing Item -->
-        <div class="col-lg-6 col-md-12">
-          <a href="listings-single-page.html" class="listing-item-container" data-marker-id="6">
-            <div class="listing-item">
-              <img src="images/listing-item-06.jpg" alt="">
-
-              <div class="listing-badge now-closed">Now Closed</div>
-
-              <div class="listing-item-content">
-                <span class="tag">Eat & Drink</span>
-                <h3>Think Coffee</h3>
-                <span>215 Terry Lane, New York</span>
-              </div>
-              <span class="like-icon"></span>
-            </div>
-          </a>
-        </div>
-        <!-- Listing Item / End -->
+        {{/sites}}
 
       </div>
 
