show template category

--- a/views/profile.mustache
+++ b/views/profile.mustache
@@ -70,7 +70,7 @@
 							</div>
 							<div class="listing-item-content">
 								<h3 style="line-height:22px">{{name}}</h3>
-								<span>{{description}}</span>
+								<span>{{template.category}}</span>
 							</div>
 							<span class="like-icon"></span>
 						</div>
