link to template

--- a/views/profile.mustache
+++ b/views/profile.mustache
@@ -41,14 +41,13 @@
           </div>
   			</section>
 
-
-  		<section class="listings-container margin-top-30">
-  			<div class="row fs-listings">
-  				<div class="col-md-12">
-  					<div class="copyrights margin-top-0">© 2017 Listeo. All Rights Reserved.</div>
-  				</div>
-  			</div>
-  		</section>
+    		<section class="listings-container margin-top-30">
+    			<div class="row fs-listings">
+    				<div class="col-md-12">
+    					<div class="copyrights margin-top-0">&copy; 2019 Listeo. All Rights Reserved.</div>
+    				</div>
+    			</div>
+    		</section>
 
   		</div>
   	</div>
@@ -61,7 +60,7 @@
 
         {{#sites}}
         <div class="col-lg-6 col-md-12">
-					<a href="#" class="listing-item-container compact">
+					<a href="/template/{{slug}}" class="listing-item-container compact">
 						<div class="listing-item">
 							<img src="{{{image}}}=s1024" alt="Vertex 360">
 							<div class="listing-item-details template-details">
