--- a/views/template.mustache
+++ b/views/template.mustache
@@ -31,9 +31,7 @@
 				<div class="listing-titlebar-title">
 					<h2>{{template.name}}<span class="listing-tag">{{template.template.category}}</span></h2>
 					<span>
-						<a href="#" class="listing-address">
-							2726 Shinn Street, New York
-						</a>
+						<a href="/profile/{{profile.slug}}" class="listing-address">{{profile.username}}</a>
 					</span>
 					<div class="star-rating" data-rating="5">
 						<div class="rating-counter"><a href="#listing-reviews">(31 reviews)</a></div>
