connect nav menu links

--- a/views/partials/nav.mustache
+++ b/views/partials/nav.mustache
@@ -16,8 +16,8 @@
           <nav id="navigation" class="style-1">
   					<ul id="responsive">
   						<li><a id="nav-home" class="current" href="/">Home</a></li>
-  						<li><a id="nav-how-it-works" href="#">How It Works</a></li>
-							<li><a id="nav-faq" href="#">FAQ</a></li>
+  						<li><a id="nav-how-it-works" href="/?selected=how+it+works">How It Works</a></li>
+							<li><a id="nav-faq" href="/?selected=faq">FAQ</a></li>
 							<li><a id="nav-login" href="#sign-in-dialog" class="popup-with-zoom-anim">Login</a></li>
   					</ul>
   				</nav>
