--- a/views/profile.mustache
+++ b/views/profile.mustache
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <head>
   {{>head}}
+  <meta name="description" content="{{profile.bio}}" />
+	<meta name="keywords" content="{{profile.keywords}}">
+
+	<meta property="og:title" content="Vertex 360 | {{profle.firstName}} {{profile.lastName}}" />
+	<meta property="og:type" content="article" />
+	<meta property="og:url" content="https://www.vertex360.co/profile/{{profile.slug}}" />
+	<meta property="og:image" content="{{profile.image}}=s260-c" />
+	<meta property="og:image:width" content="260px" />
+	<meta property="og:image:height" content="260px" />
+	<meta property="og:description" content="{{profile.bio}}" />
+
   <style>
     .template-details {
       text-align: right
