profile tags not template

--- a/views/profile.mustache
+++ b/views/profile.mustache
@@ -51,9 +51,9 @@
             <p>{{{profile.bio}}}</p>
             <h3 class="listing-desc-headline">Tags</h3>
     				<ul class="listing-features checkboxes">
-              {{#template.tags}}
+              {{#profile.tags}}
     					<li>{{.}}</li>
-              {{/template.tags}}
+              {{/profile.tags}}
     				</ul>
           </div>
   			</section>
