--- a/views/profile.mustache
+++ b/views/profile.mustache
@@ -4,7 +4,7 @@
   <meta name="description" content="{{profile.bio}}" />
 	<meta name="keywords" content="{{profile.keywords}}">
 
-	<meta property="og:title" content="Vertex 360 | {{profle.firstName}} {{profile.lastName}}" />
+	<meta property="og:title" content="Vertex 360 | {{profile.firstName}} {{profile.lastName}}" />
 	<meta property="og:type" content="article" />
 	<meta property="og:url" content="https://www.vertex360.co/profile/{{profile.slug}}" />
 	<meta property="og:image" content="{{profile.image}}=s260-c" />
