check if user logged in

--- a/views/profile.mustache
+++ b/views/profile.mustache
@@ -105,6 +105,18 @@
 
 <script type="text/javascript">window.__PRELOADED__ = {{{preloaded}}}</script>
 <script type="text/javascript" src="{{{cdn}}}/dist/js/vendor.min.js"></script>
+<script>
+  (function(){
+    var data = window.__PRELOADED__
+    var user = data.user
+
+    if (user != null){
+      $('#login-container').html('<a href="/me" class="button">My Account</a>')
+      $('#nav-menu').addClass('right-side-loggedin')
+      $('#nav-login').hide()
+    }
+  })()
+</script>
 
 </body>
 </html>
