change footer to copyright

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -84,7 +84,7 @@
   			</div>
 
         <div class="row fs-listings">
-          {{>footer}}
+          {{>copyright}}
         </div>
   		</section>
 
