--- a/views/template.mustache
+++ b/views/template.mustache
@@ -284,7 +284,7 @@
 			</div>
 		</div>
 
-		<div class="row">{{>footer}}</div>
+		<div class="row">{{>copyright}}</div>
 	</div>
 </div>
 <!-- Footer / End -->
