--- a/views/template.mustache
+++ b/views/template.mustache
@@ -246,48 +246,7 @@
 	</div>
 </div>
 
-<div id="footer" class="margin-top-80" style="background:#f9f9f9">
-	<div class="container">
-		<div class="row padding-bottom-40">
-			<div class="col-md-6 col-sm-6">
-				<img class="footer-logo" src="https://lh3.googleusercontent.com/DacvMRc4I_Zq0hENs6RyqlUcgQqY_jBdcLHvQckcpk3ZecgvzctF9_GnemZE3nCtnWFoY8g5C6gnCmccsMFP7aJi=s360" alt="Vertex 360">
-				<br><br>
-				<p>Morbi convallis bibendum urna ut viverra. Maecenas quis consequat libero, a feugiat eros. Nunc ut lacinia tortor morbi ultricies laoreet ullamcorper phasellus semper.</p>
-			</div>
-
-			<div class="col-md-3 col-sm-6">
-				<h4>Helpful Links</h4>
-				<ul class="footer-links">
-					<li><a href="#">FAQ</a></li>
-					<li><a href="#">Templates</a></li>
-					<li><a href="#">How It Works</a></li>
-					<li><a href="#">Terms of Use</a></li>
-				</ul>
-				<div class="clearfix"></div>
-			</div>
-
-			<div class="col-md-3 col-sm-12">
-				<h4>Contact</h4>
-				<div class="text-widget">
-					<span>12345 Little Lonsdale St, Melbourne</span> <br>
-					Phone: <span>(123) 123-456 </span><br>
-					E-Mail:<span> <a href="#">office@example.com</a> </span><br>
-				</div>
-
-        <!--
-				<ul class="social-icons margin-top-20">
-					<li><a class="facebook" href="#"><i class="icon-facebook"></i></a></li>
-					<li><a class="twitter" href="#"><i class="icon-twitter"></i></a></li>
-					<li><a class="gplus" href="#"><i class="icon-gplus"></i></a></li>
-					<li><a class="vimeo" href="#"><i class="icon-vimeo"></i></a></li>
-				</ul> -->
-			</div>
-		</div>
-
-		<div class="row">{{>copyright}}</div>
-	</div>
-</div>
-<!-- Footer / End -->
+{{>footer}}
 
 </div>
 <!-- Wrapper / End -->
