template page layout

--- a/views/template.mustache
+++ b/views/template.mustache
@@ -24,18 +24,22 @@
   <div class="single-listing-page-titlebar"></div>
 
 <div class="container">
-	<div class="row sticky-wrapper">
-		<div class="col-lg-8 col-md-8 padding-right-30">
+  <div class="row sticky-wrapper">
+    <div class="col-lg-12 col-md-12 padding-right-30 padding-top-120">
+      <h2>{{template.name}}<span class="listing-tag">{{template.template.category}}</span></h2>
+      <span>
+        <a href="/profile/{{profile.slug}}" class="listing-address">{{profile.username}}</a>
+      </span>
+      <div class="star-rating" data-rating="5">
+        <div class="rating-counter"><a href="#listing-reviews">(31 reviews)</a></div>
+      </div>
+    </div>
+  </div>
 
-			<div id="titlebar" class="listing-titlebar padding-top-120">
+	<div class="row sticky-wrapper">
+		<div class="col-lg-8 col-md-8 padding-right-30 margin-top-0">
+			<div id="titlebar" class="listing-titlebar">
 				<div class="listing-titlebar-title">
-					<h2>{{template.name}}<span class="listing-tag">{{template.template.category}}</span></h2>
-					<span>
-						<a href="/profile/{{profile.slug}}" class="listing-address">{{profile.username}}</a>
-					</span>
-					<div class="star-rating" data-rating="5">
-						<div class="rating-counter"><a href="#listing-reviews">(31 reviews)</a></div>
-					</div>
           <img class="margin-top-20" src="{{{template.image}}}=s1024" />
 				</div>
 			</div>
@@ -147,95 +151,29 @@
 
 		<div class="col-lg-4 col-md-4 margin-top-75 sticky">
 
-			<!-- Book Now -->
-			<div class="boxed-widget booking-widget margin-top-35">
-				<h3><i class="fa fa-calendar-check-o "></i> Booking <div class="listing-price">$49 <i>/night</i></div></h3>
-				<div class="row with-forms  margin-top-0">
-
-					<!-- Date Range Picker - docs: http://www.daterangepicker.com/ -->
-					<div class="col-lg-12">
-						<input type="text" id="date-picker" placeholder="Date" readonly="readonly">
-					</div>
-
-					<!-- Panel Dropdown -->
-					<div class="col-lg-12">
-						<div class="panel-dropdown">
-							<a href="#">Guests <span class="qtyTotal" name="qtyTotal">1</span></a>
-							<div class="panel-dropdown-content">
-
-								<!-- Quantity Buttons -->
-								<div class="qtyButtons">
-									<div class="qtyTitle">Adults</div>
-									<input type="text" name="qtyInput" value="1">
-								</div>
-
-								<div class="qtyButtons">
-									<div class="qtyTitle">Childrens</div>
-									<input type="text" name="qtyInput" value="0">
-								</div>
-
-							</div>
-						</div>
-					</div>
-					<!-- Panel Dropdown / End -->
-
-				</div>
-
-				<!-- Book Now -->
-				<a href="#" class="button book-now fullwidth margin-top-5">Request To Book</a>
-
-				<!-- Estimated Cost -->
-<!-- 				<div class="booking-estimated-cost">
-					<strong>Total Cost</strong>
-					<span>$49</span>
-				</div> -->
-			</div>
-			<!-- Book Now / End -->
-
 			<!-- Contact -->
 			<div class="boxed-widget margin-top-35">
 				<div class="hosted-by-title">
-					<h4><span>Hosted by</span> <a href="pages-user-profile.html">Tom Perrin</a></h4>
-					<a href="pages-user-profile.html" class="hosted-by-avatar"><img src="images/dashboard-avatar.jpg" alt=""></a>
+					<h4><span>Created by</span> <a class="capitalize" href="/profile/{{template.profile.slug}}">{{template.profile.firstName}} {{template.profile.lastName}}</a></h4>
+					<a href="/profile/{{template.profile.slug}}" class="hosted-by-avatar"><img src="{{{template.profile.image}}}=s120-c" alt="Vertex 360 | {{template.profile.firstName}} {{template.profile.lastName}}"></a>
 				</div>
-				<ul class="listing-details-sidebar">
-					<li><i class="sl sl-icon-phone"></i> (123) 123-456</li>
-					<!-- <li><i class="sl sl-icon-globe"></i> <a href="#">http://example.com</a></li> -->
-					<li><i class="fa fa-envelope-o"></i> <a href="#">tom@example.com</a></li>
-				</ul>
 
 				<ul class="listing-details-sidebar social-profiles">
 					<li><a href="#" class="facebook-profile"><i class="fa fa-facebook-square"></i> Facebook</a></li>
-					<li><a href="#" class="twitter-profile"><i class="fa fa-twitter"></i> Twitter</a></li>
-					<!-- <li><a href="#" class="gplus-profile"><i class="fa fa-google-plus"></i> Google Plus</a></li> -->
+					<li><a href="#" class="linkedin-profile"><i class="fa fa-linkedin"></i> LinkedIn</a></li>
 				</ul>
-
-				<!-- Reply to review popup -->
-				<div id="small-dialog" class="zoom-anim-dialog mfp-hide">
-					<div class="small-dialog-header">
-						<h3>Send Message</h3>
-					</div>
-					<div class="message-reply margin-top-0">
-						<textarea cols="40" rows="3" placeholder="Your message to Tom"></textarea>
-						<button class="button">Send Message</button>
-					</div>
-				</div>
-
-				<a href="#small-dialog" class="send-message-to-owner button popup-with-zoom-anim"><i class="sl sl-icon-envelope-open"></i> Send Message</a>
+				<a href="/profile/{{template.profile.slug}}" class="send-message-to-owner button popup-with-zoom-anim">View Profile</a>
 			</div>
 			<!-- Contact / End-->
 
 
 			<!-- Share / Like -->
 			<div class="listing-share margin-top-40 margin-bottom-40 no-border">
-				<button class="like-button"><span class="like-icon"></span> Bookmark this template</button>
-				<span>159 people bookmarked this place</span>
+				<button class="like-button"><span class="like-icon"></span> Save this template</button>
 
-					<!-- Share Buttons -->
 					<ul class="share-buttons margin-top-40 margin-bottom-0">
 						<li><a class="fb-share" href="#"><i class="fa fa-facebook"></i> Share</a></li>
 						<li><a class="twitter-share" href="#"><i class="fa fa-twitter"></i> Tweet</a></li>
-						<!-- <li><a class="pinterest-share" href="#"><i class="fa fa-pinterest-p"></i> Pin</a></li> -->
 					</ul>
 					<div class="clearfix"></div>
 			</div>
