--- a/views/template.mustache
+++ b/views/template.mustache
@@ -26,10 +26,11 @@
 <div class="container">
   <div class="row sticky-wrapper">
     <div class="col-lg-12 col-md-12 padding-right-30 padding-top-120">
-      <h2>{{template.name}}<span class="listing-tag">{{template.template.category}}</span></h2>
+      <h2>{{template.name}}</h2>
       <span>
-        <a href="/profile/{{profile.slug}}" class="listing-address">{{profile.username}}</a>
+        <a href="/profile/{{template.profile.slug}}" class="listing-address">{{template.profile.username}}</a>
       </span>
+      <button class="like-button"><span class="like-icon"></span> Save this template</button>
       <div class="star-rating" data-rating="5">
         <div class="rating-counter"><a href="#listing-reviews">(31 reviews)</a></div>
       </div>
@@ -38,7 +39,7 @@
 
 	<div class="row sticky-wrapper">
 		<div class="col-lg-8 col-md-8 padding-right-30 margin-top-0">
-			<div id="titlebar" class="listing-titlebar">
+			<div id="titlebar" class="listing-titlebar padding-top-0">
 				<div class="listing-titlebar-title">
           <img class="margin-top-20" src="{{{template.image}}}=s1024" />
 				</div>
@@ -149,10 +150,9 @@
 
 		</div>
 
-		<div class="col-lg-4 col-md-4 margin-top-75 sticky">
+		<div class="col-lg-4 col-md-4 margin-top-25 sticky">
 
-			<!-- Contact -->
-			<div class="boxed-widget margin-top-35">
+			<div class="boxed-widget margin-top-0">
 				<div class="hosted-by-title">
 					<h4><span>Created by</span> <a class="capitalize" href="/profile/{{template.profile.slug}}">{{template.profile.firstName}} {{template.profile.lastName}}</a></h4>
 					<a href="/profile/{{template.profile.slug}}" class="hosted-by-avatar"><img src="{{{template.profile.image}}}=s120-c" alt="Vertex 360 | {{template.profile.firstName}} {{template.profile.lastName}}"></a>
@@ -164,18 +164,17 @@
 				</ul>
 				<a href="/profile/{{template.profile.slug}}" class="send-message-to-owner button popup-with-zoom-anim">View Profile</a>
 			</div>
-			<!-- Contact / End-->
 
 
 			<!-- Share / Like -->
 			<div class="listing-share margin-top-40 margin-bottom-40 no-border">
 				<button class="like-button"><span class="like-icon"></span> Save this template</button>
 
-					<ul class="share-buttons margin-top-40 margin-bottom-0">
-						<li><a class="fb-share" href="#"><i class="fa fa-facebook"></i> Share</a></li>
-						<li><a class="twitter-share" href="#"><i class="fa fa-twitter"></i> Tweet</a></li>
-					</ul>
-					<div class="clearfix"></div>
+				<ul class="share-buttons margin-top-40 margin-bottom-0">
+					<li><a class="fb-share" href="#"><i class="fa fa-facebook"></i> Share</a></li>
+					<li><a class="twitter-share" href="#"><i class="fa fa-twitter"></i> Tweet</a></li>
+				</ul>
+				<div class="clearfix"></div>
 			</div>
 
 		</div>
