--- a/views/template.mustache
+++ b/views/template.mustache
@@ -25,12 +25,12 @@
 
 <div class="container">
   <div class="row sticky-wrapper">
-    <div class="col-lg-12 col-md-12 padding-right-30 padding-top-120">
+    <div class="col-lg-8 col-md-8 padding-right-30 padding-top-120">
       <h2>{{template.name}}</h2>
+      <button style="float:right" class="button with-icon popup-with-zoom-anim">Launch this template</button>
       <span>
         <a href="/profile/{{template.profile.slug}}" class="listing-address">{{template.profile.username}}</a>
       </span>
-      <button class="like-button"><span class="like-icon"></span> Save this template</button>
       <div class="star-rating" data-rating="5">
         <div class="rating-counter"><a href="#listing-reviews">(31 reviews)</a></div>
       </div>
