link to profile

--- a/views/template.mustache
+++ b/views/template.mustache
@@ -162,7 +162,7 @@
 					<li><a href="#" class="facebook-profile"><i class="fa fa-facebook-square"></i> Facebook</a></li>
 					<li><a href="#" class="linkedin-profile"><i class="fa fa-linkedin"></i> LinkedIn</a></li>
 				</ul>
-				<a href="/profile/{{template.profile.slug}}" class="send-message-to-owner button popup-with-zoom-anim">View Profile</a>
+				<a href="/profile/{{template.profile.slug}}" class="send-message-to-owner button">View Profile</a>
 			</div>
 
 
