--- a/views/template.mustache
+++ b/views/template.mustache
@@ -27,7 +27,7 @@
   <div class="row sticky-wrapper">
     <div class="col-lg-8 col-md-8 padding-right-30 padding-top-120">
       <h2>{{template.name}}</h2>
-      <button style="float:right" class="button with-icon popup-with-zoom-anim">Launch this template</button>
+      <button style="float:right" class="button with-icon popup-with-zoom-anim">Launch This Template</button>
       <span>
         <a href="/profile/{{template.profile.slug}}" class="listing-address">{{template.profile.username}}</a>
       </span>
