link to template page

--- a/views/templates.mustache
+++ b/views/templates.mustache
@@ -58,7 +58,7 @@
 
         {{#templates}}
 				<div class="col-lg-4 col-md-6">
-					<a href="#" class="listing-item-container compact">
+					<a href="/template/{{slug}}" class="listing-item-container compact">
 						<div class="listing-item">
 							<img src="{{{image}}}=s1024" alt="Vertex 360">
 							<div class="listing-item-details template-details">
