connect footer links

--- a/views/partials/footer.mustache
+++ b/views/partials/footer.mustache
@@ -9,9 +9,9 @@
 
 			<div class="col-md-3 col-sm-6">
 				<ul class="footer-links">
-					<li><a href="#">FAQ</a></li>
-					<li><a href="#">Templates</a></li>
-					<li><a href="#">How It Works</a></li>
+					<li><a href="/?selected=faq">FAQ</a></li>
+					<li><a href="/templates">Templates</a></li>
+					<li><a href="/?selected=how+it+works">How It Works</a></li>
 					<li><a href="#">Terms of Use</a></li>
 				</ul>
 				<div class="clearfix"></div>
