--- a/views/profile.mustache
+++ b/views/profile.mustache
@@ -7,7 +7,7 @@
 	<meta property="og:title" content="Vertex 360 | {{profile.firstName}} {{profile.lastName}}" />
 	<meta property="og:type" content="article" />
 	<meta property="og:url" content="https://www.vertex360.co/profile/{{profile.slug}}" />
-	<meta property="og:image" content="{{profile.image}}=s260-c" />
+	<meta property="og:image" content="{{{profile.image}}}=s260-c" />
 	<meta property="og:image:width" content="260px" />
 	<meta property="og:image:height" content="260px" />
 	<meta property="og:description" content="{{profile.bio}}" />
