--- a/views/account.mustache
+++ b/views/account.mustache
@@ -296,7 +296,7 @@
           firstName: $('#input-profile-firstName').val().trim().toLowerCase(),
           lastName: $('#input-profile-lastName').val().trim().toLowerCase(),
           username: $('#input-profile-username').val().trim(),
-          bio: $('#input-profile-bio').val()
+          bio: $('#input-profile-bio').val(),
           tags: tags
         }
 
